tests/data/midterm/midterm/2018312/Q6/submission_1/.vocStudentSubmissionReport.txt

[Executed at: Wed Mar 14 1:57:17 PDT 2018]

Traceback (most recent call last):
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24782_4/asnlib/submission.py", line 8, in <module>
    from q6_work import find_path
  File "./q6_work.py", line 5
    Pasir Ris, Tampines, Simei, Tanah Merah, Bedok, Kembangan, Eunos, Paya Lebar, Aljuned, Kallang, Lavender, Bugis, City Hall, Raffles Place, Tanjong Pagar, Outram Park, Tiong Bahru, Redhill, Queenstown, Commonwealth, Buona Vista, Dover, Clementi, Jurong East, Chinese Garden, Lakeside, Boon Lay, Pioneer, Joo Koon, Gul Circle, Tuas Crescent, Tuas West Road, Tuas Link]
            ^
SyntaxError: invalid syntax
Command exited with non-zero status 1
